added + updated files
added moby dick corpus; added flexible compatibility with `.txt` or `.json` file types; updated `PhraseLiteral` comments